--- a/src/index.scss
+++ b/src/index.scss
@@ -1,7 +1,16 @@
 body {
-    margin:0;
+    margin: 0;
+    width: 100vw;
+    overflow-x: hidden;
 }
 
+.headerhome {
+    max-width: 100vw;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 .photos {
     transition: all 1000ms;
     &__group {
@@ -9,12 +18,18 @@ body {
         flex-direction: column;
         align-items: center;
         justify-content: center;
-        width: 100vw;
-        margin-top: 10%;
-        margin-bottom: 10%;
         & img {
             width: 80vw;
             margin-bottom: 5%;
         }
     }
+}
+
+.slider {
+    width: 100vw;
+    height: 100vh;
+    position: fixed;
+    top: 0;
+    right: 0;
+    background-color: red;
 }
