--- a/src/index.scss
+++ b/src/index.scss
@@ -1,7 +1,15 @@
 body {
     margin: 0;
-    width: 100vw;
-    overflow-x: hidden;
+    max-width: 100vw;
+}
+
+
+li {
+    list-style: none;
+}
+ul {
+    margin: 0;
+    padding: 0;
 }
 
 .headerhome {
@@ -32,4 +40,89 @@ body {
     top: 0;
     right: 0;
     background-color: red;
+}
+
+.navbar {
+    width: 100vw;
+    min-height: 8vh;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    background-color: black;
+    position: absolute;
+    top: 0;
+    &__burger {
+        z-index: 10;
+        position: relative;
+        border: none;
+        background: none;
+        margin-right: 13%;
+        height: 28px;
+        width: 32px;
+        &--line {
+            width: 32px;
+            height: 3px;
+            background-color: white;
+            transition: .3s cubic-bezier(.8, .5, .2, 1.4);
+            transition-duration: 500ms;
+            position: absolute;
+        }
+        & span:nth-child(1) {
+            top: 0;
+        }
+        & span:nth-child(2) {
+            top: 13px;
+            opacity: 1;
+        }
+        & span:nth-child(3) {
+            bottom: 0;
+        }
+        &.true span:nth-child(1) {
+            transform: rotate(45deg);
+            top: 13px;
+        }
+        &.true span:nth-child(2) {
+            opacity: 0;
+        }
+        &.true span:nth-child(3) {
+            transform: rotate(-45deg);
+            top: 13px;
+        }
+    }
+}
+
+.menu {
+    width: 100vw;
+    height: 100vh;
+    position: absolute;
+    background-color: black;
+    color: white;
+    z-index: 1;
+    transition: all 500ms;
+    transform: translateY(-100%);
+    opacity: 0;
+    display: flex;
+    align-items: center;
+    &.true {
+        transform: translateY(0%);
+        opacity: 1;
+        & ul, li, a {
+            opacity: 1;
+        }
+    }
+    & ul {
+        width: 100vw;
+        height: 50vh;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-around;
+        & li, a {
+            transition: all 1000ms;
+            font-size: 2rem;
+            color: white;
+            text-decoration: none;
+            opacity: 0;
+        }
+    }
 }
